# 3sem_25

./: .gitignore  README.md
lections_overview/: 2.md  lection1.md  lection_2.md
sem_1/examples/: 10_exec_pipes.c  3_reap_zombies.c  4_2_exec_pedantic.c  9_dup2_parent_child.c  syscall.c
sem_1/homework/: CMakeLists.txt
sem_1/homework/include/: command_parser.h  common.h  run_cmd.h
sem_1/homework/src/: command_parser.c  main.c  read_cmd.c  run_cmd.c
sem_2/: 2_pipe_size_exc.c
sem_2/examples/: 1_fifo_reader.c  fifo.c  pipe.c
sem_2/homework/: CMakeLists.txt  run.sh
sem_2/homework/.cache/clangd/index/: duplex_pipe.c.C7EE8AC47547BD9B.idx  duplex_pipe.h.149C9F7481F71F56.idx  file.c.D0410859ACFE17C6.idx  file.h.9FA58AF1034082ED.idx  main.c.9BAB0C2298D82B80.idx
sem_2/homework/include/: duplex_pipe.h  file.h
sem_2/homework/src/: duplex_pipe.c  file.c  main.c
sem_3/: task.md
sem_3/examples/: note.md
sem_3/homework/: CMakeLists.txt  run.sh
sem_3/homework/graphs/: generate.py
sem_3/homework/include/: common.h  shm.h
sem_3/homework/src/: fifo_main.c  mq_main.c  shm_main.c
sem_4/examples/: 10_mutex_vs_spinlock.c  12_detach_1.c  12_detach_2.c  13_pass_parameters_via_exit.c  1_thread_clone.c  2_process_clone.c  clone_thread.c  posix_threads.c  producer-cons.c  sem_posix.c  task.md
sem_4/homework/: CMakeLists.txt  README.md
sem_4/homework/graph/: generate_graph.py
sem_4/homework/include/: monte_carlo.h
sem_4/homework/src/: calculate.c  main.c
sem_5/examples/: cond_var.c
sem_6/examples/: signal.c
sem_7/examples/: a.out  mem_mon.c  sbrk.c  sig_prio.c
task_5/examples/: 1_rtsig.c  2_sigaction_si_val.c  3_block_unblock.c  4_block_unblock_old_api.c  5_sig_restart.c  6_sig_stand_vs_realtime.c  7_mmap_parent_child.c  8_mmap_brk.c
task_5/homework/: .gitignore  CMakeLists.txt  run.sh
task_5/homework/include/: common.h  shm.h
task_5/homework/src/: handler.c  main.c
task_6/examples/: 1_listdir_recursively.c  1_page_faults_count.c  2_major_page_faults_trig.c  inotify.c
task_6/homework/: .gitignore  CMakeLists.txt  README.md  TESTING.md
task_6/homework/include/: backup.h  common.h  config.h  daemon.h  file.h  ipc.h
task_6/homework/logger/: log.c  log.h
task_6/homework/src/: backup.c  config.c  daemon.c  file.c  ipc.c  main.c
task_7/: note.md
task_7/examples/: 2_aio.c
task_7/homework/: CMakeLists.txt  run.sh
task_7/homework/include/: client.h  common.h  fifo.h  server.h
task_7/homework/logger/: log.c
task_7/homework/src/: fifo.c
task_7/homework/src/client/: client.c  main_client.c
task_7/homework/src/server/: main_server.c  server.c
task_8/: udp_cli.c
task_8/examples/: cli  serv  tcp_client.c  tcp_server.c
task_8/homework/: .gitignore  CMakeLists.txt  run_local_tests.sh
task_8/homework/client/include/: client.h  config.h  tcp_client.h
task_8/homework/client/src/: client.c  client_main.c  config.c  tcp_client.c
task_8/homework/include/: common.h  tcp_server.h
task_8/homework/logger/: log.h
task_8/homework/monte_carlo/: monte_carlo.c  monte_carlo.h
task_8/homework/server/include/: tcp_server.h
task_8/homework/server/src/: server_main.c  tcp_server.c
task_8/homework/src/: client_main.c  common.c  server_main.c  tcp_client.c  tcp_server.c  udp_discovery.c
task_8/homework/utils/include/: common.h  udp_discovery.h
task_8/homework/utils/src/: udp_discovery.c
